# Reflow

./: .gitignore  LICENSE  MANIFEST.in  README.md  REFACTORING_SUMMARY.md  debug_world_model_validation.py  example_config.yaml  example_train.py  minimal_repro.py  pyproject.toml  replicate_issue.py  repro_with_reflow_cli.py  test_debug_validation_metrics.py  test_restored_config.py  test_world_model_torch_compile_debug.py
callbacks/: __init__.py
callbacks/core/: memory_cleanup_callback.py
callbacks/logging/: __init__.py  step_output_logger_callback.py
callbacks/monitoring/: __init__.py  flow_progress_bar_callback.py
callbacks/pause/: __init__.py  improved_keyboard_handler.py  pause_callback.py  pause_mixin.py  pause_state_machine.py
callbacks/wandb/: wandb_watch_callback.py
data/: simple_data.py
lightning_reflow/: __init__.py  __main__.py
lightning_reflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lightning_reflow/callbacks/: __init__.py
lightning_reflow/callbacks/core/: __init__.py  base_reflow_callback.py  config_embedding_mixin.py  config_validation_callback.py  environment_callback.py  memory_cleanup_callback.py
lightning_reflow/callbacks/logging/: config_summary_logger.py
lightning_reflow/callbacks/monitoring/: flow_progress_bar_callback.py
lightning_reflow/callbacks/pause/: improved_keyboard_handler.py  non_blocking_keyboard_handler.py  pause_callback.py  pause_config.py  pause_mixin.py  unified_keyboard_handler.py
lightning_reflow/callbacks/wandb/: __init__.py  wandb_artifact_checkpoint.py  wandb_watch_callback.py
lightning_reflow/cli/: __init__.py  __main__.py  lightning_cli.py
lightning_reflow/core/: __init__.py  config_loader.py  lightning_reflow.py  shared_config.py
lightning_reflow/data/: __init__.py  simple_data.py
lightning_reflow/models/: __init__.py  simple_model.py
lightning_reflow/services/: __init__.py  wandb_service.py
lightning_reflow/strategies/: __init__.py  local_path_resume_strategy.py  resume_strategy.py  wandb_artifact_resume_strategy.py
lightning_reflow/utils/: __init__.py  torch_utils.py
lightning_reflow/utils/checkpoint/: __init__.py  checkpoint_utils.py  datamodule_state.py  flow_progress_bar_state.py  manager_state.py  scientific_reproducibility_state.py  trainer_config_state.py  wandb_artifact_state.py
lightning_reflow/utils/config/: __init__.py  config_synthesis.py
lightning_reflow/utils/logging/: __init__.py  environment_manager.py  logging_config.py
lightning_reflow/utils/wandb/: __init__.py  resume_command_handler.py  unified_artifact_manager.py  wandb_artifact_manager.py
tests/: __init__.py  conftest.py  test_pause_wandb_integration.py  test_runner.py  test_wandb_artifact_checkpoint.py  test_wandb_artifact_checkpoint_refactored.py
tests/examples/: test_clean_approach_demo.py
tests/integration/: test_all_improvements.py  test_cli_auto_callbacks.py  test_cli_integration.py  test_cli_resume_config_override.py  test_comprehensive_resume_functionality.py  test_compressed_checkpoint_resume.py  test_end_to_end.py  test_environment_resume.py  test_numpy_checkpoint_loading.py  test_refactored_callbacks.py  test_wandb_resume_integration.py
tests/unit/: test_simple_data.py  test_simple_model.py
tests/unit/callbacks/: test_pause_callback.py
tests/unit/checkpoint/: test_extracted_manager_states.py
tests/unit/cli/: test_wandb_run_id_argument.py
tests/unit/config/: test_stale_config_detection.py
tests/unit/core/: test_config_override_priority.py  test_progress_bar_management.py
tests/unit/environment/: test_early_environment_setup.py  test_environment_variable_restoration_comprehensive.py
tests/unit/pause/: test_keyboard_handler.py  test_minimal_should_stop.py  (+2 more)
utils/checkpoint/: manager_state.py
utils/logging/: environment_manager.py
utils/wandb/: unified_artifact_manager.py
(+2 files in other folders)
